Fix broken CSS layout

--- a/src/style/aboutTreeLink.css
+++ b/src/style/aboutTreeLink.css
@@ -60,6 +60,7 @@
     gap: 5%;
     align-items: center;
     padding: 4rem 0 5rem 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 .main-AboutTreeLink p{
